--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.6",
     "next": "9.5.3",
+    "next-images": "^1.5.0",
     "prettier": "^2.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
