--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 # dependencies
 /node_modules
 /.pnp
