--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "prettier": "^2.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-elastic-carousel": "^0.9.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.0",
     "swr": "^0.3.5"
   }
 }
